# voice-agent

./: .gitignore  Makefile  README.md  README_HEALTHCARE.md  call_lead.py  call_patient.py  docker-compose.yml  langgraph.json  leads_dental_calgary.csv  make_call.py  patients_appointments.csv  pyproject.toml  start_server.py  test_call.py
.claude/commands/: call-lead.md  call.md  logs.md  restart-servers.md  run-voice-server.md  start-servers.md  status.md  update-ngrok.md
scripts/: auth_google_calendar.py  notify.sh
src/: chatterbox_tts.py  comfyui_tts.py  events.py  kokoro_tts.py  main.py  mira_tts.py  orpheus_engine.py  sentence_splitter.py  turn_detector.py  utils.py  whisper_stt.py
src/sdr_agent/: __init__.py  booking_form.py  cli.py  config.py  pipeline.py  scrape_leads.py  server.py  server_simple.py  thread_mapping.py
src/sdr_agent/agent/: __init__.py  call_monitor.py  graph.py  graph_healthcare.py  prompts.py  prompts_healthcare.py  sales_agent.py  tools.py  tools_healthcare.py
src/sdr_agent/campaign/: __init__.py  business_hours.py  manager.py
src/sdr_agent/data/: csv_logger.py  database.py
src/sdr_agent/integrations/: __init__.py  google_calendar.py
src/sdr_agent/scraper/: __init__.py  base.py  google_maps.py  yelp.py
src/sdr_agent/telephony/: __init__.py  call_recovery.py  ivr_handler.py  media_stream.py  twilio_client.py
static/: index.html
